title & meta desc. of author_individual complete

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 08:36+0000\n"
+"POT-Creation-Date: 2023-11-24 09:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -42,7 +42,17 @@ msgstr "Spanisch"
 msgid "Hindi"
 msgstr "Hindi"
 
-#: templates/authors/author_individual.html:3
+#: templates/authors/author_individual.html:5
 #, python-format
 msgid "Quotes by %(author_name)s"
 msgstr "Zitate von %(author_name)s"
+
+#: templates/authors/author_individual.html:9
+#, python-format
+msgid ""
+"Discover the essence of %(author_name)s's philospohy and insights through a "
+"curated selection of memorable quotes."
+msgstr ""
+"Entdecken Sie die Essenz der Philosophie und Erkenntnisse von %(author_name)s durch eine"
+"Kuratierte Auswahl unvergesslicher Zitate."
+
