author index translation complete

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:26+0000\n"
+"POT-Creation-Date: 2023-11-24 09:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,6 +53,17 @@ msgid ""
 "Discover the essence of %(author_name)s's philospohy and insights through a "
 "curated selection of memorable quotes."
 msgstr ""
-"Entdecken Sie die Essenz der Philosophie und Erkenntnisse von %(author_name)s durch eine"
-"Kuratierte Auswahl unvergesslicher Zitate."
+"Entdecken Sie die Essenz der Philosophie und Erkenntnisse von "
+"%(author_name)s durch eineKuratierte Auswahl unvergesslicher Zitate."
 
+#: templates/authors/index.html:2 templates/authors/index.html:10
+msgid "Authors"
+msgstr "Autoren"
+
+#: templates/authors/index.html:3
+msgid ""
+"Delve into the minds of literary giants and discover timeless quotes that "
+"resonate with the human experience."
+msgstr ""
+"Tauchen Sie ein in die Gedankenwelt literarischer Giganten und entdecken Sie zeitlose Zitate, die"
+"mit der menschlichen Erfahrung in Einklang stehen."
