--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:33+0000\n"
+"POT-Creation-Date: 2023-11-24 09:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,5 +55,17 @@ msgid ""
 "Discover the essence of %(author_name)s's philospohy and insights through a "
 "curated selection of memorable quotes."
 msgstr ""
-"Раскройте суть философии и идей %(author_name)s с помощью "
-"Тщательно подобранная подборка памятных цитат."
+"Раскройте суть философии и идей %(author_name)s с помощью Тщательно "
+"подобранная подборка памятных цитат."
+
+#: templates/authors/index.html:2 templates/authors/index.html:10
+msgid "Authors"
+msgstr "Авторы"
+
+#: templates/authors/index.html:3
+msgid ""
+"Delve into the minds of literary giants and discover timeless quotes that "
+"resonate with the human experience."
+msgstr ""
+"Погрузитесь в умы литературных гигантов и откройте для себя вечные цитаты, которые"
+"резонировать с человеческим опытом"
