--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:33+0000\n"
+"POT-Creation-Date: 2023-11-24 09:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,5 +53,17 @@ msgid ""
 "Discover the essence of %(author_name)s's philospohy and insights through a "
 "curated selection of memorable quotes."
 msgstr ""
-"Descubra la esencia de la filosofía y los conocimientos de %(author_name)s a través de un "
-"Selección curada de citas memorables."
+"Descubra la esencia de la filosofía y los conocimientos de %(author_name)s a "
+"través de un Selección curada de citas memorables."
+
+#: templates/authors/index.html:2 templates/authors/index.html:10
+msgid "Authors"
+msgstr "Autores"
+
+#: templates/authors/index.html:3
+msgid ""
+"Delve into the minds of literary giants and discover timeless quotes that "
+"resonate with the human experience."
+msgstr ""
+"Adéntrate en las mentes de los gigantes de la literatura y descubre citas atemporales que"
+"resuena con la experiencia humana."
