--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:42+0000\n"
+"POT-Creation-Date: 2023-11-24 09:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,14 +56,33 @@ msgstr ""
 "Entdecken Sie die Essenz der Philosophie und Erkenntnisse von "
 "%(author_name)s durch eineKuratierte Auswahl unvergesslicher Zitate."
 
-#: templates/authors/index.html:2 templates/authors/index.html:10
+#: templates/authors/index.html:4 templates/authors/index.html:16
+#: templates/layout/header.html:24 templates/layout/header.html:71
 msgid "Authors"
 msgstr "Autoren"
 
-#: templates/authors/index.html:3
+#: templates/authors/index.html:8
 msgid ""
 "Delve into the minds of literary giants and discover timeless quotes that "
 "resonate with the human experience."
 msgstr ""
-"Tauchen Sie ein in die Gedankenwelt literarischer Giganten und entdecken Sie zeitlose Zitate, die"
-"mit der menschlichen Erfahrung in Einklang stehen."
+"Tauchen Sie ein in die Gedankenwelt literarischer Giganten und entdecken Sie "
+"zeitlose Zitate, diemit der menschlichen Erfahrung in Einklang stehen."
+
+#: templates/layout/header.html:23 templates/layout/header.html:70
+msgid "Topics"
+msgstr "Themen"
+
+#: templates/topics/topic_individual.html:5
+#, python-format
+msgid "%(topic_name)s Quotes"
+msgstr "%(topic_name)s Zitate"
+
+#: templates/topics/topic_individual.html:9
+#, python-format
+msgid ""
+"Immerse yourself in the beauty of words that capture the essence of "
+"%(topic_name)s, offering moments of reflection and motivation"
+msgstr ""
+"Tauchen Sie ein in die Schönheit der Worte, die die Essenz von einfangen."
+"%(topic_name)s bieten Momente der Reflexion und Motivation"
