--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:42+0000\n"
+"POT-Creation-Date: 2023-11-24 09:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,14 +56,33 @@ msgstr ""
 "Descubra la esencia de la filosofía y los conocimientos de %(author_name)s a "
 "través de un Selección curada de citas memorables."
 
-#: templates/authors/index.html:2 templates/authors/index.html:10
+#: templates/authors/index.html:4 templates/authors/index.html:16
+#: templates/layout/header.html:24 templates/layout/header.html:71
 msgid "Authors"
 msgstr "Autores"
 
-#: templates/authors/index.html:3
+#: templates/authors/index.html:8
 msgid ""
 "Delve into the minds of literary giants and discover timeless quotes that "
 "resonate with the human experience."
 msgstr ""
-"Adéntrate en las mentes de los gigantes de la literatura y descubre citas atemporales que"
-"resuena con la experiencia humana."
+"Adéntrate en las mentes de los gigantes de la literatura y descubre citas "
+"atemporales queresuena con la experiencia humana."
+
+#: templates/layout/header.html:23 templates/layout/header.html:70
+msgid "Topics"
+msgstr "Temas"
+
+#: templates/topics/topic_individual.html:5
+#, python-format
+msgid "%(topic_name)s Quotes"
+msgstr "%(topic_name)s citas"
+
+#: templates/topics/topic_individual.html:9
+#, python-format
+msgid ""
+"Immerse yourself in the beauty of words that capture the essence of "
+"%(topic_name)s, offering moments of reflection and motivation"
+msgstr ""
+"Sumérjase en la belleza de las palabras que capturan la esencia de "
+"%(topic_name)s, ofreciendo momentos de reflexión y motivación"
