--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:42+0000\n"
+"POT-Creation-Date: 2023-11-24 09:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,14 +56,33 @@ msgstr ""
 "Découvrez l'essence de la philosophie et des idées de %(author_name)s à "
 "travers un une sélection organisée de citations mémorables."
 
-#: templates/authors/index.html:2 templates/authors/index.html:10
+#: templates/authors/index.html:4 templates/authors/index.html:16
+#: templates/layout/header.html:24 templates/layout/header.html:71
 msgid "Authors"
 msgstr "Auteurs"
 
-#: templates/authors/index.html:3
+#: templates/authors/index.html:8
 msgid ""
 "Delve into the minds of literary giants and discover timeless quotes that "
 "resonate with the human experience."
 msgstr ""
-"Plongez dans l'esprit des géants de la littérature et découvrez des citations intemporelles qui "
-"résonnent avec l'expérience humaine."
+"Plongez dans l'esprit des géants de la littérature et découvrez des "
+"citations intemporelles qui résonnent avec l'expérience humaine."
+
+#: templates/layout/header.html:23 templates/layout/header.html:70
+msgid "Topics"
+msgstr "Sujets"
+
+#: templates/topics/topic_individual.html:5
+#, python-format
+msgid "%(topic_name)s Quotes"
+msgstr "%(topic_name)s Citations"
+
+#: templates/topics/topic_individual.html:9
+#, python-format
+msgid ""
+"Immerse yourself in the beauty of words that capture the essence of "
+"%(topic_name)s, offering moments of reflection and motivation"
+msgstr ""
+"Plongez-vous dans la beauté des mots qui capturent l'essence de "
+"%(topic_name)s, offrant des moments de réflexion et de motivation"
