--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:42+0000\n"
+"POT-Creation-Date: 2023-11-24 09:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,14 +58,33 @@ msgstr ""
 "Раскройте суть философии и идей %(author_name)s с помощью Тщательно "
 "подобранная подборка памятных цитат."
 
-#: templates/authors/index.html:2 templates/authors/index.html:10
+#: templates/authors/index.html:4 templates/authors/index.html:16
+#: templates/layout/header.html:24 templates/layout/header.html:71
 msgid "Authors"
 msgstr "Авторы"
 
-#: templates/authors/index.html:3
+#: templates/authors/index.html:8
 msgid ""
 "Delve into the minds of literary giants and discover timeless quotes that "
 "resonate with the human experience."
 msgstr ""
-"Погрузитесь в умы литературных гигантов и откройте для себя вечные цитаты, которые"
-"резонировать с человеческим опытом"
+"Погрузитесь в умы литературных гигантов и откройте для себя вечные цитаты, "
+"которыерезонировать с человеческим опытом"
+
+#: templates/layout/header.html:23 templates/layout/header.html:70
+msgid "Topics"
+msgstr "Темы"
+
+#: templates/topics/topic_individual.html:5
+#, python-format
+msgid "%(topic_name)s Quotes"
+msgstr "%(topic_name)s Цитаты"
+
+#: templates/topics/topic_individual.html:9
+#, python-format
+msgid ""
+"Immerse yourself in the beauty of words that capture the essence of "
+"%(topic_name)s, offering moments of reflection and motivation"
+msgstr ""
+"Погрузитесь в красоту слов, передающих суть"
+"%(topic_name)s, предлагает моменты для размышлений и мотивации"
