--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -73,7 +73,7 @@ msgstr ""
 
 #: templates/layout/header.html:23 templates/layout/header.html:70
 msgid "Topics"
-msgstr "Темы"
+msgstr "Топики"
 
 #: templates/topics/topic_individual.html:5
 #, python-format
