--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 09:55+0000\n"
+"POT-Creation-Date: 2023-11-24 10:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,8 +72,17 @@ msgstr ""
 "которыерезонировать с человеческим опытом"
 
 #: templates/layout/header.html:23 templates/layout/header.html:70
+#: templates/topics/index.html:5
 msgid "Topics"
 msgstr "Топики"
+
+#: templates/topics/index.html:8
+msgid ""
+"Explore a vast collection of quotes organized by topic, featuring words of "
+"wisdom from renowned authors, historical figures, and everyday people."
+msgstr ""
+"Изучите обширную коллекцию цитат, организованных по темам, со словами "
+"мудрость известных авторов, исторических деятелей и обычных людей."
 
 #: templates/topics/topic_individual.html:5
 #, python-format
@@ -86,5 +95,5 @@ msgid ""
 "Immerse yourself in the beauty of words that capture the essence of "
 "%(topic_name)s, offering moments of reflection and motivation"
 msgstr ""
-"Погрузитесь в красоту слов, передающих суть"
-"%(topic_name)s, предлагает моменты для размышлений и мотивации"
+"Погрузитесь в красоту слов, передающих суть%(topic_name)s, предлагает "
+"моменты для размышлений и мотивации"
