--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 10:27+0000\n"
+"POT-Creation-Date: 2023-11-24 16:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -42,12 +42,12 @@ msgstr "Spanisch"
 msgid "Hindi"
 msgstr "Hindi"
 
-#: templates/authors/author_individual.html:5
+#: templates/authors/author_individual.html:4
 #, python-format
 msgid "Quotes by %(author_name)s"
 msgstr "Zitate von %(author_name)s"
 
-#: templates/authors/author_individual.html:9
+#: templates/authors/author_individual.html:6
 #, python-format
 msgid ""
 "Discover the essence of %(author_name)s's philospohy and insights through a "
@@ -56,12 +56,12 @@ msgstr ""
 "Entdecken Sie die Essenz der Philosophie und Erkenntnisse von "
 "%(author_name)s durch eineKuratierte Auswahl unvergesslicher Zitate."
 
-#: templates/authors/index.html:4 templates/authors/index.html:16
+#: templates/authors/index.html:3 templates/authors/index.html:13
 #: templates/layout/header.html:24 templates/layout/header.html:71
 msgid "Authors"
 msgstr "Autoren"
 
-#: templates/authors/index.html:8
+#: templates/authors/index.html:5
 msgid ""
 "Delve into the minds of literary giants and discover timeless quotes that "
 "resonate with the human experience."
@@ -69,25 +69,40 @@ msgstr ""
 "Tauchen Sie ein in die Gedankenwelt literarischer Giganten und entdecken Sie "
 "zeitlose Zitate, diemit der menschlichen Erfahrung in Einklang stehen."
 
+#: templates/homepage.html:3
+msgid "Discover Inspirational Quotes"
+msgstr "Entdecken Sie inspirierende Zitate"
+
+#: templates/homepage.html:4
+msgid ""
+"Explore profound insights and timeless wisdom through our curated collection "
+"of quotes from renowned personalities worldwide."
+msgstr ""
+"Entdecken Sie tiefgreifende Erkenntnisse "
+"und zeitlose Weisheit durch unsere kuratierte "
+"Sammlung von Zitaten renommierter Persönlichkeiten "
+"aus der ganzen Welt."
+
 #: templates/layout/header.html:23 templates/layout/header.html:70
-#: templates/topics/index.html:5
+#: templates/topics/index.html:4
 msgid "Topics"
 msgstr "Themen"
 
-#: templates/topics/index.html:8
+#: templates/topics/index.html:6
 msgid ""
 "Explore a vast collection of quotes organized by topic, featuring words of "
 "wisdom from renowned authors, historical figures, and everyday people."
 msgstr ""
-"Entdecken Sie eine umfangreiche Sammlung von Zitaten, die nach Themen geordnet sind und Wörter von enthalten."
-"Weisheiten von renommierten Autoren, historischen Persönlichkeiten und gewöhnlichen Menschen."
+"Entdecken Sie eine umfangreiche Sammlung von Zitaten, die nach Themen "
+"geordnet sind und Wörter von enthalten.Weisheiten von renommierten Autoren, "
+"historischen Persönlichkeiten und gewöhnlichen Menschen."
 
-#: templates/topics/topic_individual.html:5
+#: templates/topics/topic_individual.html:4
 #, python-format
 msgid "%(topic_name)s Quotes"
 msgstr "%(topic_name)s Zitate"
 
-#: templates/topics/topic_individual.html:9
+#: templates/topics/topic_individual.html:6
 #, python-format
 msgid ""
 "Immerse yourself in the beauty of words that capture the essence of "
