--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-24 16:15+0000\n"
+"POT-Creation-Date: 2023-11-24 16:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,9 +78,12 @@ msgid ""
 "Explore profound insights and timeless wisdom through our curated collection "
 "of quotes from renowned personalities worldwide."
 msgstr ""
-"Explorez des idées profondes et une sagesse intemporelle"
-" grâce à notre collection de citations de personnalités "
-"renommées du monde entier."
+"Explorez des idées profondes et une sagesse intemporelle grâce à notre "
+"collection de citations de personnalités renommées du monde entier."
+
+#: templates/layout/footer.html:3
+msgid "Made with Love in India."
+msgstr "Fabriqué avec amour en Inde."
 
 #: templates/layout/header.html:23 templates/layout/header.html:70
 #: templates/topics/index.html:4
