New: quote o/t day feature. cache for 1 day by CF.

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-25 03:45+0000\n"
+"POT-Creation-Date: 2023-11-28 05:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: mainapp/models.py:93
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContact"
+msgstr "Kontaktiere uns"
+
+#: mainapp/models.py:94
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContacts"
+msgstr "Kontaktiere uns"
 
 #: quotesapp/base_settings.py:123
 msgid "English"
@@ -57,7 +69,7 @@ msgstr ""
 "%(author_name)s durch eineKuratierte Auswahl unvergesslicher Zitate."
 
 #: templates/authors/index.html:3 templates/authors/index.html:13
-#: templates/layout/header.html:26 templates/layout/header.html:92
+#: templates/layout/header.html:26 templates/layout/header.html:93
 msgid "Authors"
 msgstr "Autoren"
 
@@ -86,10 +98,14 @@ msgstr ""
 msgid "Made with Love in India."
 msgstr "Mit Liebe in Indien hergestellt."
 
-#: templates/layout/header.html:25 templates/layout/header.html:91
+#: templates/layout/header.html:25 templates/layout/header.html:92
 #: templates/topics/index.html:4
 msgid "Topics"
 msgstr "Themen"
+
+#: templates/layout/header.html:27 templates/layout/header.html:95
+msgid "Quote of the Day"
+msgstr "Zitat des Tages"
 
 #: templates/pages/contact.html:5
 msgid "Contact Us"
@@ -100,9 +116,8 @@ msgid ""
 "If you are having any problem on/regarding this site, just fill this form "
 "and we will be in touch asap."
 msgstr ""
-"Wenn Sie ein Problem mit dieser Website haben, "
-"füllen Sie einfach dieses Formular aus und wir "
-"werden uns so schnell wie möglich bei Ihnen melden."
+"Wenn Sie ein Problem mit dieser Website haben, füllen Sie einfach dieses "
+"Formular aus und wir werden uns so schnell wie möglich bei Ihnen melden."
 
 #: templates/topics/index.html:6
 msgid ""
