--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-25 03:45+0000\n"
+"POT-Creation-Date: 2023-11-28 05:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: mainapp/models.py:93
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContact"
+msgstr "Contáctenos"
+
+#: mainapp/models.py:94
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContacts"
+msgstr "Contáctenos"
 
 #: quotesapp/base_settings.py:123
 msgid "English"
@@ -57,7 +69,7 @@ msgstr ""
 "través de un Selección curada de citas memorables."
 
 #: templates/authors/index.html:3 templates/authors/index.html:13
-#: templates/layout/header.html:26 templates/layout/header.html:92
+#: templates/layout/header.html:26 templates/layout/header.html:93
 msgid "Authors"
 msgstr "Autores"
 
@@ -86,10 +98,14 @@ msgstr ""
 msgid "Made with Love in India."
 msgstr "Hecho con amor en la India."
 
-#: templates/layout/header.html:25 templates/layout/header.html:91
+#: templates/layout/header.html:25 templates/layout/header.html:92
 #: templates/topics/index.html:4
 msgid "Topics"
 msgstr "Temas"
+
+#: templates/layout/header.html:27 templates/layout/header.html:95
+msgid "Quote of the Day"
+msgstr "Cita del día"
 
 #: templates/pages/contact.html:5
 msgid "Contact Us"
@@ -100,8 +116,8 @@ msgid ""
 "If you are having any problem on/regarding this site, just fill this form "
 "and we will be in touch asap."
 msgstr ""
-"Si tiene algún problema con respecto a este sitio, simplemente"
-" complete este formulario y nos comunicaremos con usted lo antes posible."
+"Si tiene algún problema con respecto a este sitio, simplemente complete este "
+"formulario y nos comunicaremos con usted lo antes posible."
 
 #: templates/topics/index.html:6
 msgid ""
