--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-25 03:45+0000\n"
+"POT-Creation-Date: 2023-11-28 05:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: mainapp/models.py:93
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContact"
+msgstr "Contactez-nous"
+
+#: mainapp/models.py:94
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContacts"
+msgstr "Contactez-nous"
 
 #: quotesapp/base_settings.py:123
 msgid "English"
@@ -57,7 +69,7 @@ msgstr ""
 "travers un une sélection organisée de citations mémorables."
 
 #: templates/authors/index.html:3 templates/authors/index.html:13
-#: templates/layout/header.html:26 templates/layout/header.html:92
+#: templates/layout/header.html:26 templates/layout/header.html:93
 msgid "Authors"
 msgstr "Auteurs"
 
@@ -85,10 +97,14 @@ msgstr ""
 msgid "Made with Love in India."
 msgstr "Fabriqué avec amour en Inde."
 
-#: templates/layout/header.html:25 templates/layout/header.html:91
+#: templates/layout/header.html:25 templates/layout/header.html:92
 #: templates/topics/index.html:4
 msgid "Topics"
 msgstr "Sujets"
+
+#: templates/layout/header.html:27 templates/layout/header.html:95
+msgid "Quote of the Day"
+msgstr "Citation du jour"
 
 #: templates/pages/contact.html:5
 msgid "Contact Us"
@@ -99,8 +115,8 @@ msgid ""
 "If you are having any problem on/regarding this site, just fill this form "
 "and we will be in touch asap."
 msgstr ""
-"Si vous rencontrez un problème sur/concernant ce site, remplissez "
-"simplement ce formulaire et nous vous contacterons dans les plus brefs délais."
+"Si vous rencontrez un problème sur/concernant ce site, remplissez simplement "
+"ce formulaire et nous vous contacterons dans les plus brefs délais."
 
 #: templates/topics/index.html:6
 msgid ""
