--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-25 03:45+0000\n"
+"POT-Creation-Date: 2023-11-28 05:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,6 +19,18 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
+#: mainapp/models.py:93
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContact"
+msgstr "Связаться с нами"
+
+#: mainapp/models.py:94
+#, fuzzy
+#| msgid "Contact Us"
+msgid "SimpleContacts"
+msgstr "Связаться с нами"
 
 #: quotesapp/base_settings.py:123
 msgid "English"
@@ -59,7 +71,7 @@ msgstr ""
 "подобранная подборка памятных цитат."
 
 #: templates/authors/index.html:3 templates/authors/index.html:13
-#: templates/layout/header.html:26 templates/layout/header.html:92
+#: templates/layout/header.html:26 templates/layout/header.html:93
 msgid "Authors"
 msgstr "Авторы"
 
@@ -87,10 +99,14 @@ msgstr ""
 msgid "Made with Love in India."
 msgstr "Сделано с любовью в Индии."
 
-#: templates/layout/header.html:25 templates/layout/header.html:91
+#: templates/layout/header.html:25 templates/layout/header.html:92
 #: templates/topics/index.html:4
 msgid "Topics"
 msgstr "Топики"
+
+#: templates/layout/header.html:27 templates/layout/header.html:95
+msgid "Quote of the Day"
+msgstr "Цитата дня"
 
 #: templates/pages/contact.html:5
 msgid "Contact Us"
@@ -101,8 +117,8 @@ msgid ""
 "If you are having any problem on/regarding this site, just fill this form "
 "and we will be in touch asap."
 msgstr ""
-"Если у вас возникли какие-либо проблемы на/относительно этого сайта, "
-"просто заполните эту форму, и мы свяжемся с вами как можно скорее"
+"Если у вас возникли какие-либо проблемы на/относительно этого сайта, просто "
+"заполните эту форму, и мы свяжемся с вами как можно скорее"
 
 #: templates/topics/index.html:6
 msgid ""
